opam-version: "1.2"
name: "guizmin"
version: "dev"
maintainer: "Philippe Veber <philippe.veber@gmail.com>"
authors: "Philippe Veber <philippe.veber@gmail.com>"
homepage: "https://github.com/pveber/guizmin"
bug-reports: "https://github.com/pveber/guizmin/issues"
license: "GPL3"
dev-repo: "https://github.com/pveber/guizmin.git"

build: ["dune" "build" "-p" name "-j" jobs]

depends: [
  "bistro"    {= "dev"}
]
